--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '28.0.2'
 
     defaultConfig {
         minSdkVersion 16
@@ -38,5 +38,5 @@ allprojects {
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
-    compile 'org.tensorflow:tensorflow-android:1.3.0'
+    compile 'org.tensorflow:tensorflow-android:1.10.0'
 }
